--add-opens clean after spring boot upgrade.